--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,13 @@
       <version>1.9.10</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/com.esotericsoftware/kryonet -->
+    <dependency>
+      <groupId>com.esotericsoftware</groupId>
+      <artifactId>kryonet</artifactId>
+      <version>2.22.0-RC1</version>
+    </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
