--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,7 @@
           <version>3.0.0</version>
         </plugin>
       </plugins>
-    </pluginManagement>
+    </pluginManagement><plugins><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><configuration><source>9</source><target>9</target></configuration></plugin></plugins>
     <resources>
       <resource>
         <directory>${basedir}/assets</directory>
